--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,8 +9,8 @@ import { Typing } from "@/components/Typing";
     <h2
       class="max-w-3xl mb-6 font-light text-gray-200 lg:mb-8 md:text-lg lg:text-2xl dark:text-gray-400"
     >
-      Trust
-      
+      <!-- Trust -->
+
       <Typing aria-hidden="true" client:load />
     </h2>
   </section>
